<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.simpledeveloper.superclick.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/click_stats_header"
        android:textSize="30sp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="32dp"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textSize="55sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="32dp"
        android:text="@string/sample_digit"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:layout_marginBottom="32dp"
        android:text="@string/times"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/addCounter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        android:text="@string/click_me"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/resetCounter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center_horizontal"
        android:layout_marginBottom="32dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        android:text="@string/reset"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/switchActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        android:text="@string/switch_activity"/>
</LinearLayout>
