<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.simpledeveloper.superclick.SecondActivity"
    tools:showIn="@layout/activity_second">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/you_made"/>

    <TextView
        android:id="@+id/counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sample_counter"
        android:textSize="60sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="22dp"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/clicks"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/go_back"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:text="@string/take_me_back"
        android:layout_height="wrap_content"/>

</LinearLayout>
